adjusting text align

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </fieldset>
                 <fieldset name="input-details">
                     <label for="email">E-mail</label>
-                    <input type="email" placeholder="sofie@invise.se" class="input" name="email">
+                    <input type="email" placeholder="sofie@rydmark.se" class="input" name="email">
                     <label for="work">Work</label>
                     <input type="text" placeholder="Frontend AB" class="input" name="work">
                 </fieldset>
